# sandcastle

./: .gitignore  Cargo.toml  README.md
.context_bank/: ARCHITECTURE.md  CONVENTIONS.md  CRATE_REFERENCE.md  KNOWN_ISSUES.md  OVERVIEW.md
.context_bank/product/: vulnerability-map.md
.context_bank/technical/: architecture.md
crates/sandcastle-executor/: Cargo.toml
crates/sandcastle-executor/src/: main.rs
crates/sandcastle-manager/src/: config.rs  manager.rs
crates/sandcastle-process/: Cargo.toml
crates/sandcastle-process/src/: lib.rs  oci.rs  sandbox.rs
crates/sandcastle-server/: Cargo.toml
crates/sandcastle-server/src/: main.rs  tools.rs
docs/: README.md
docs/product/: mcp-tools-spec.md  use-cases.md  vision.md
docs/product/phase_1/: goals.md
docs/technical/: architecture.md  security.md
docs/technical/phase_1/: phase1-spec.md  spec.md
scripts/: build-fc-rootfs.sh  build-rootfs.sh  setup.sh
service/: Cargo.toml
service/crates/sandcastle-executor/: Cargo.toml
service/crates/sandcastle-executor/src/: main.rs
service/crates/sandcastle-firecracker/: Cargo.toml
service/crates/sandcastle-firecracker/src/: config.rs  lib.rs  sandbox.rs  vsock.rs
service/crates/sandcastle-firecracker/tests/: e2e.rs
service/crates/sandcastle-gvisor/: Cargo.toml
service/crates/sandcastle-gvisor/src/: config.rs  lib.rs  oci.rs  runsc.rs  sandbox.rs
service/crates/sandcastle-gvisor/tests/: e2e.rs
service/crates/sandcastle-manager/: Cargo.toml
service/crates/sandcastle-manager/src/: lib.rs  manager.rs  session.rs
service/crates/sandcastle-process/: Cargo.toml
service/crates/sandcastle-process/src/: config.rs  oci.rs  sandbox.rs
service/crates/sandcastle-process/tests/: e2e.rs
service/crates/sandcastle-runtime/: Cargo.toml
service/crates/sandcastle-runtime/src/: error.rs  lib.rs  runtime.rs  types.rs
service/crates/sandcastle-server/: Cargo.toml
service/crates/sandcastle-server/src/: main.rs  tools.rs
tests/: integration.sh
