[package]
name = "sandcastle-executor"
version = "0.1.0"
edition = "2021"
description = "In-sandbox executor binary for Sandcastle"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
vsock = { version = "0.5", optional = true }

[features]
default = []
vsock-mode = ["vsock"]
