[package]
name = "sandcastle-manager"
version = "0.1.0"
edition = "2021"
description = "Sandbox lifecycle management for Sandcastle"

[dependencies]
sandcastle-runtime = { path = "../sandcastle-runtime" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
