[package]
name = "sandcastle-server"
version = "0.1.0"
edition = "2021"
description = "MCP server for Sandcastle sandboxed code execution"

[[bin]]
name = "sandcastle"
path = "src/main.rs"

[dependencies]
sandcastle-runtime = { path = "../sandcastle-runtime" }
sandcastle-manager = { path = "../sandcastle-manager" }
sandcastle-process = { path = "../sandcastle-process" }
sandcastle-gvisor = { path = "../sandcastle-gvisor" }
sandcastle-firecracker = { path = "../sandcastle-firecracker" }
rmcp = { version = "1", features = ["server", "transport-io"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
schemars = "1.0"
